# adcs-unix-testing

./: .clang-format  CMakeLists.txt  Makefile  PD_loop.c  README.md  test.c  test.h
PVDX-ADCS/: README.md
PVDX-ADCS/C/: Makefile  README.md
PVDX-ADCS/C/include/: ADCS.h  UKF.h
PVDX-ADCS/C/src/: ADCS.c  UKF.c
PVDX-ADCS/MATLAB/: README.md
PVDX-ADCS/MATLAB/Algorithms/: DownQuaternion  PD_loop  README.md  Two Body Propogation.m  bDot.m  eceftoeci.m  magnetosphere.m  moment2current3axis.m  orbitalToECI.m  simulate.m  sunVectorECI.m  torque2moment3axis.m
PVDX-ADCS/Python/: MUKF_1vec.py  MUKF_2vec.py  MUKF_Dot.py  README.md  photodiode placement.ipynb  pts2planes.py  simulation_tools.py
include/: bdot.h  ecef2eci.h  iterate.h  laextension.h  orbital2eci.h  sunvec.h  test.h  torque2moments.h
linalg/Lapack/Blas/: dgemm.c  dnrm2.c  idamax.c  sgemm.c
linalg/Lapack/Include/: f2c.h
linalg/Lapack/Scr/: dlarfp.c
linalg/LinearAlgebra/: declareFunctions.h  inv.c  kf.c  linsolve.c  lu.c  mul.c  print.c  quadprog.c  tran.c
src/: adcs_algorithms.c  adcs_algorithms.h  bdot.c  ecef2eci.c  iterate.c  laextension.c  magnetosphere.c  magnetosphere.h  magnetosphere_update.c  main.c  moments2currents.c  orbital2eci.c  quat.c  quat.h  sunvec.c  test.c  test.h  torque2moments.c  wmm_coeffs.h
